solution is more concise for left and right items and correctly handles ul margin and left/right items alignment.

--- a/flex/03-flex-header-2/style.css
+++ b/flex/03-flex-header-2/style.css
@@ -15,18 +15,13 @@ body {
   display: flex;
   padding: 8px;
   justify-content: space-between;
-  align-items: center;
 }
 
-.left-items {
+.left-items, .right-items {
 display: flex;
+align-items: center;
 gap: 16px;
 }
-
-.right-items {
-  display: flex;
-  gap: 16px;
-  }
 
 .profile-image {
   background: rebeccapurple;
@@ -59,6 +54,7 @@ a {
 
 ul {
   list-style-type: none;
+  margin: 0px;
   padding: 0px;
   display: flex;
   gap: 16px;
